--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "build": "rm -rf lib && ncc build src/run.ts -o lib --source-map",
+    "build": "rimraf lib && ncc build src/run.ts -o lib --source-map",
     "lint": "eslint --ext '.js,.ts' .",
     "test": "tsc --sourceMap && ava"
   },
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "node-fetch": "^2.7.0",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "typescript": "5.2.x"
   },
   "prettier": {
